[metadata]
name = pycbf2
description = PyCBF
author = Daniel Pietz
license = MIT
license_file = LICENSE
platforms = unix, linux, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    pycbf2
install_requires =
    numpy >=1.22.4
    numba >=0.56.0
    scipy >=1.9.1
    pandas >=1.4.4

python_requires = >=3.8
package_dir =
    =src
zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
pycbf = py.typed

[flake8]
max-line-length = 160